--- a/templates/user/swiping.html
+++ b/templates/user/swiping.html
@@ -148,7 +148,68 @@
                     <!-- User Card -->
                     <div class="col-lg-5 col-md-6 col-sm-10 offset-md-0 offset-sm-1">
                         <div class="card"><img class="card-img-top"
-                                               src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Rectangular_green_flag.svg/1280px-Rectangular_green_flag.svg.png">
+                                               src="{% static 'images/card_bg/8764038.jpg' %}">
+
+                            <div class="card-body">
+
+                                <div class="d-flex align-items-center">
+                                    <img src="https://img.icons8.com/bubbles/100/000000/user.png"
+                                         class="float-left rounded-circle avatar">
+                                    <h6 class="font-weight-bold pt-1 ">John Doe</h6>
+                                    <!-- Location -->
+
+                                    <div class="d-flex align-items-center ml-5 ">
+                                        <img src="{% static 'images/icons8-location-48.png' %}"
+                                             class="float-left rounded-circle location">
+                                        <div class="font-weight-bold pt-1 h8-style ">Hagen</div>
+                                    </div>
+                                </div>
+
+                                <div class="font-weight-bold pt-1 h7-style ">About me</div>
+                                <div class="text-muted description">I'm a proud father of my son.
+                                    Looking for playmates for him
+                                </div>
+
+                                <div class="d-flex align-items-center ml-5">
+                                    <img src="{% static 'images/children_pic.png' %}" class="float-left  children">
+                                    <div class="font-weight-bold pt-1 h9-style ">My Children</div>
+                                </div>
+
+                                <div class="font-weight-bold pt-1 h7-style ">John II, 9</div>
+                                <div class="text-muted description">Emely is 9. She likes playing outside, and loves
+                                    singing.
+                                </div>
+
+                                <!-- Child Picture -->
+                                <div class="row mt-3">
+                                    <div class="col-4">
+                                        <img src="{% static 'images/pic1.png' %}" class="img-fluid">
+                                    </div>
+                                    <div class="col-4">
+                                        <img src="{% static 'images/pic2.png' %}" class="img-fluid">
+                                    </div>
+                                    <div class="col-4">
+                                        <img src="{% static 'images/pic3.png' %}" class="img-fluid">
+                                    </div>
+                                </div>
+
+                                <!-- Like dislike buttons-->
+                                <div class="tinder--buttons mt-5">
+                                    <button id="nope1"><img src="{% static 'images/dislike.png' %}" alt="Remove">
+                                    </button>
+                                    <button id="love1"><img src="{% static 'images/like.png' %}"></button>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- Seconds card -->
+
+                    <div class="col-lg-5 col-md-6 col-sm-10 offset-md-0 offset-sm-1">
+                        <div class="card"><img class="card-img-top"
+                                               src="{% static 'images/card_bg/vivid-blurred-colorful-wallpaper-background.jpg' %}">
 
                             <div class="card-body">
 
@@ -203,6 +264,10 @@
                             </div>
                         </div>
                     </div>
+
+
+
+
 
 
                 </div>
